--- a/task2.html
+++ b/task2.html
@@ -49,5 +49,13 @@
         <i class="bi bi-three-dots"></i></div>
         <p>more</p>
     </div>
+<div class="item2">
+    <span>
+        you are screen sharing
+    </span>
+    </div>
+    <div class="item3">
+    <span>stop sharing</span>
+        </div>
 </body>
 </html>
